Adjust color of alerts and flashes and add Info icon to alerts. Fix text-wrapping in alert Update student learning link

--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -5,14 +5,18 @@
 }
 
 #header {
-	background-color: #CBF6FD;
+	background-color: #F9E7BD;
 	color: #000;
 	border-top: solid #bbb 1px;
 	border-bottom: solid #bbb 1px;
-	font-size: 1.15rem;
+	font-size: 1.25rem;
 	font-family: "Roboto Condensed";
+	img {
+		position: relative;
+		top: -2px;
+	}
 	.container {
-		padding: 14px 10px;
+		padding: 17px;
 		height: auto;
 		vertical-align: middle;
 		a {
